# simpex_solver

./: .gitignore  CMakeLists.txt  README.md
simplex_solver/: CMakeLists.txt
simplex_solver/include/simplex_solver/: expression_t.hpp  relation_t.hpp  simple_table_with_data_t.hpp  simplex_solver_api.hpp  simplex_solver_t.hpp  simplex_table_builder.hpp  simplex_table_t.hpp  variable_t.hpp
simplex_solver/src/: expression_t.cpp  relation_t.cpp  simplex_solver_t.cpp  simplex_table_builder.cpp  simplex_table_t.cpp  variable_t.cpp
tests/: CMakeLists.txt  expression_t_tests.cpp  relation_t_tests.cpp  simplex_solver_tests.cpp  simplex_table_builder_tests.cpp  simplex_table_with_data_tests.cpp  variable_t_tests.cpp
